tests/baselines/reference/unusedPrivateVariableInClass5.errors.txt
unusedPrivateVariableInClass5.ts(3,13): error TS6133: 'y' is declared but its value is never read.


==== unusedPrivateVariableInClass5.ts (1 errors) ====
    class greeter {
        private x: string;
        private y: string;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
        public  z: string;
    
        constructor() {
            this.x;
        }
    }